--- a/src/app/news/components/posts/posts.component.scss
+++ b/src/app/news/components/posts/posts.component.scss
@@ -3,3 +3,11 @@
     background-color: rgb(224, 220, 220);
     padding-left: 20px;
 }
+.post{
+    background-color: rgb(247, 228, 205);
+    padding: 20px
+}
+
+.commentButton{
+    margin-top: 10px;
+}
