statistics have been developed

--- a/src/app/news/components/news/news.component.html
+++ b/src/app/news/components/news/news.component.html
@@ -1,3 +1,4 @@
+<app-statistics></app-statistics>
 <div class="buttonsArea">
     <button type="button" [routerLink]="['/posts']">Posts</button>
     <button type="button" [routerLink]="['/comments']">My Comments</button>
